--- a/WEB DEVELOP EVENT 2/frontend/admin.html
+++ b/WEB DEVELOP EVENT 2/frontend/admin.html
@@ -85,8 +85,8 @@ console.log(window.location.href);
 var users2 = [
   {
     "_id": "65f2f26393d523caef2de730",
-    "email" : "cses1admin@gmail.com",
-    "password": "s1cse_24"
+    "email" : "adithts82@mail.com",
+    "password": "Daith@2005"
 
   },
   {
