--- a/WEB DEVELOP EVENT 2/frontend/login.html
+++ b/WEB DEVELOP EVENT 2/frontend/login.html
@@ -88,8 +88,8 @@ console.log(window.location.href);
 var users = [
   {
     "_id": "65f28d9264ed0a013ef8fc8f",
-    "email": "cseasecretary@gmail.com",
-    "password": "csea_24"
+    "email": "nilidbiju@gmail.com",
+    "password": "anlidrose23"
   },
   {
     "_id": "65f28d9264ed0a013ef8fc90",
